[package]
name = "vsed"
version = "1.0.0"
edition = "2021"
authors = ["Anquan Wu <hi@wuaq.cn>"]
description = "A Visual Studio Code extension downloader."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3.0.0", features = ["derive"] } # 命令行解析
colored = "2" # 命令终端多彩显示
reqwest = {version = "0.11", features = ["json"]} # HTTP客户端
tokio = {version = "1", features = ["full"]} # 异步处理
regex = "1.5.4" # 正则表达式
indicatif = "0.16.2" # 控制台进度条

[dev-dependencies]
tokio-test = "0.4.2" # 异步测试

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization
codegen-units = 1 # Specify 1 parallel codegen unit
panic = "abort" # No traceback information is generated